
[TestCreate_CSIEnabled_InstallsOnKind - 1]
📦 Create registries...
► creating and configuring registries
► creating 'test-docker.io' for 'https://registry-1.docker.io'
► creating 'test-ghcr.io' for 'https://ghcr.io'
► creating 'test-quay.io' for 'https://quay.io'
► creating 'test-registry.k8s.io' for 'https://registry.k8s.io'
► waiting for mirror registries to become ready
✔ registries created

🌐 Create network...
► creating docker network
► creating network 'kind'
✔ docker network created

🔗 Connect registries...
► connecting registries to docker network
► connecting 'test-docker.io' to 'kind'
► connecting 'test-ghcr.io' to 'kind'
► connecting 'test-quay.io' to 'kind'
► connecting 'test-registry.k8s.io' to 'kind'
✔ registries connected to docker network

🚀 Create cluster...
► creating cluster
✔ cluster created

⚙️ Configure registry mirrors...
► configuring registry mirrors in cluster
✗ failed to configure registry mirrors in cluster: run registry stage: failed to execute stage: failed to configure registry mirrors: failed to configure containerd registry mirrors: no Kind nodes found for cluster: test

📦 Installing components...
► csi installing
✔ csi installed
---

[TestCreate_DefaultCSI_DoesNotInstall - 1]
📦 Create registries...
► creating and configuring registries
► creating 'test-docker.io' for 'https://registry-1.docker.io'
► creating 'test-ghcr.io' for 'https://ghcr.io'
► creating 'test-quay.io' for 'https://quay.io'
► creating 'test-registry.k8s.io' for 'https://registry.k8s.io'
► waiting for mirror registries to become ready
✔ registries created

🌐 Create network...
► creating docker network
► creating network 'kind'
✔ docker network created

🔗 Connect registries...
► connecting registries to docker network
► connecting 'test-docker.io' to 'kind'
► connecting 'test-ghcr.io' to 'kind'
► connecting 'test-quay.io' to 'kind'
► connecting 'test-registry.k8s.io' to 'kind'
✔ registries connected to docker network

🚀 Create cluster...
► creating cluster
✔ cluster created

⚙️ Configure registry mirrors...
► configuring registry mirrors in cluster
✗ failed to configure registry mirrors in cluster: run registry stage: failed to execute stage: failed to configure registry mirrors: failed to configure containerd registry mirrors: no Kind nodes found for cluster: test
---

[TestCreate_DefaultCertManager_DoesNotInstall - 1]
📦 Create registries...
► creating and configuring registries
► creating 'test-docker.io' for 'https://registry-1.docker.io'
► creating 'test-ghcr.io' for 'https://ghcr.io'
► creating 'test-quay.io' for 'https://quay.io'
► creating 'test-registry.k8s.io' for 'https://registry.k8s.io'
► waiting for mirror registries to become ready
✔ registries created

🌐 Create network...
► creating docker network
► creating network 'kind'
✔ docker network created

🔗 Connect registries...
► connecting registries to docker network
► connecting 'test-docker.io' to 'kind'
► connecting 'test-ghcr.io' to 'kind'
► connecting 'test-quay.io' to 'kind'
► connecting 'test-registry.k8s.io' to 'kind'
✔ registries connected to docker network

🚀 Create cluster...
► creating cluster
✔ cluster created

⚙️ Configure registry mirrors...
► configuring registry mirrors in cluster
✗ failed to configure registry mirrors in cluster: run registry stage: failed to execute stage: failed to configure registry mirrors: failed to configure containerd registry mirrors: no Kind nodes found for cluster: test
---

[TestCreate_EnabledCertManager_PrintsInstallStage - 1]
📦 Create registries...
► creating and configuring registries
► creating 'test-docker.io' for 'https://registry-1.docker.io'
► creating 'test-ghcr.io' for 'https://ghcr.io'
► creating 'test-quay.io' for 'https://quay.io'
► creating 'test-registry.k8s.io' for 'https://registry.k8s.io'
► waiting for mirror registries to become ready
✔ registries created

🌐 Create network...
► creating docker network
► creating network 'kind'
✔ docker network created

🔗 Connect registries...
► connecting registries to docker network
► connecting 'test-docker.io' to 'kind'
► connecting 'test-ghcr.io' to 'kind'
► connecting 'test-quay.io' to 'kind'
► connecting 'test-registry.k8s.io' to 'kind'
✔ registries connected to docker network

🚀 Create cluster...
► creating cluster
✔ cluster created

⚙️ Configure registry mirrors...
► configuring registry mirrors in cluster
✗ failed to configure registry mirrors in cluster: run registry stage: failed to execute stage: failed to configure registry mirrors: failed to configure containerd registry mirrors: no Kind nodes found for cluster: test

📦 Installing components...
► cert-manager installing
✔ cert-manager installed
---

[TestCreate_GitOps_PrintsInstallStage/ArgoCD - 1]
🗄️ Create local registry...
► creating local registry
✔ local registry created

📦 Create registries...
► creating and configuring registries
► creating 'test-docker.io' for 'https://registry-1.docker.io'
► creating 'test-ghcr.io' for 'https://ghcr.io'
► creating 'test-quay.io' for 'https://quay.io'
► creating 'test-registry.k8s.io' for 'https://registry.k8s.io'
► waiting for mirror registries to become ready
✔ registries created

🌐 Create network...
► creating docker network
► creating network 'kind'
✔ docker network created

🔗 Connect registries...
► connecting registries to docker network
► connecting 'test-docker.io' to 'kind'
► connecting 'test-ghcr.io' to 'kind'
► connecting 'test-quay.io' to 'kind'
► connecting 'test-registry.k8s.io' to 'kind'
✔ registries connected to docker network

🚀 Create cluster...
► creating cluster
✔ cluster created

⚙️ Configure registry mirrors...
► configuring registry mirrors in cluster
✗ failed to configure registry mirrors in cluster: run registry stage: failed to execute stage: failed to configure registry mirrors: failed to configure containerd registry mirrors: no Kind nodes found for cluster: test

🔌 Attach local registry...
► attaching local registry to cluster
✔ local registry attached to cluster

📦 Installing components...
► argocd installing
✔ argocd installed

⚙️ Configuring components...
► configuring argocd resources
ℹ Access ArgoCD UI at https://localhost:8080 via: kubectl port-forward svc/argocd-server -n argocd 8080:443
✔ components configured
---

[TestCreate_GitOps_PrintsInstallStage/Flux - 1]
🗄️ Create local registry...
► creating local registry
✔ local registry created

📦 Create registries...
► creating and configuring registries
► creating 'test-docker.io' for 'https://registry-1.docker.io'
► creating 'test-ghcr.io' for 'https://ghcr.io'
► creating 'test-quay.io' for 'https://quay.io'
► creating 'test-registry.k8s.io' for 'https://registry.k8s.io'
► waiting for mirror registries to become ready
✔ registries created

🌐 Create network...
► creating docker network
► creating network 'kind'
✔ docker network created

🔗 Connect registries...
► connecting registries to docker network
► connecting 'test-docker.io' to 'kind'
► connecting 'test-ghcr.io' to 'kind'
► connecting 'test-quay.io' to 'kind'
► connecting 'test-registry.k8s.io' to 'kind'
✔ registries connected to docker network

🚀 Create cluster...
► creating cluster
✔ cluster created

⚙️ Configure registry mirrors...
► configuring registry mirrors in cluster
✗ failed to configure registry mirrors in cluster: run registry stage: failed to execute stage: failed to configure registry mirrors: failed to configure containerd registry mirrors: no Kind nodes found for cluster: test

🔌 Attach local registry...
► attaching local registry to cluster
✔ local registry attached to cluster

📦 Installing components...
► flux installing
✔ flux installed

⚙️ Configuring components...
► applying custom resources
► waiting for flux to be ready
✔ components configured
---

[TestCreate_LocalRegistryDisabled_SkipsRegistryStages - 1]
📦 Create registries...
► creating and configuring registries
► creating 'test-docker.io' for 'https://registry-1.docker.io'
► creating 'test-ghcr.io' for 'https://ghcr.io'
► creating 'test-quay.io' for 'https://quay.io'
► creating 'test-registry.k8s.io' for 'https://registry.k8s.io'
► waiting for mirror registries to become ready
✔ registries created

🌐 Create network...
► creating docker network
► creating network 'kind'
✔ docker network created

🔗 Connect registries...
► connecting registries to docker network
► connecting 'test-docker.io' to 'kind'
► connecting 'test-ghcr.io' to 'kind'
► connecting 'test-quay.io' to 'kind'
► connecting 'test-registry.k8s.io' to 'kind'
✔ registries connected to docker network

🚀 Create cluster...
► creating cluster
✔ cluster created

⚙️ Configure registry mirrors...
► configuring registry mirrors in cluster
✗ failed to configure registry mirrors in cluster: run registry stage: failed to execute stage: failed to configure registry mirrors: failed to configure containerd registry mirrors: no Kind nodes found for cluster: test
---

[TestCreate_Minimal_PrintsOnlyClusterLifecycle - 1]
📦 Create registries...
► creating and configuring registries
► creating 'test-docker.io' for 'https://registry-1.docker.io'
► creating 'test-ghcr.io' for 'https://ghcr.io'
► creating 'test-quay.io' for 'https://quay.io'
► creating 'test-registry.k8s.io' for 'https://registry.k8s.io'
► waiting for mirror registries to become ready
✔ registries created

🌐 Create network...
► creating docker network
► creating network 'kind'
✔ docker network created

🔗 Connect registries...
► connecting registries to docker network
► connecting 'test-docker.io' to 'kind'
► connecting 'test-ghcr.io' to 'kind'
► connecting 'test-quay.io' to 'kind'
► connecting 'test-registry.k8s.io' to 'kind'
✔ registries connected to docker network

🚀 Create cluster...
► creating cluster
✔ cluster created

⚙️ Configure registry mirrors...
► configuring registry mirrors in cluster
✗ failed to configure registry mirrors in cluster: run registry stage: failed to execute stage: failed to configure registry mirrors: failed to configure containerd registry mirrors: no Kind nodes found for cluster: test
---
